S8: решил проблему с помощью метода преобразовывающего заданую дату в нужный формат времени(это сделано чтобы избежать ошибок введеных null значений пользователем)